shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmQueryTooBigException.kt
package com.example.osmapi.core.common.errors

class OsmQueryTooBigException:OsmBadUserInputException() {
}